<resources>
    <string name="app_name">mCare</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cadastro_consulta">Register Consultation</string>
    <string name="title_activity_inf_paciente">InfPaciente</string>
    <string name="title_activity_novo__contato">Novo_Contato</string>
    <string name="title_activity_novo_contato">NovoContato</string>
    <string name="title_activity_consulta_individual">ConsultaIndividual</string>
    <string name="title_activity_lista_consultas">ListaConsultas</string>
    <string name="title_activity_editar_consulta">Editar_consulta</string>
	<string name="not_provided">not provided</string>
    <string-array name="array_tipos_medicamento">
        <item>Pill</item>
        <item>capsule</item>
        <item>Gel</item>
        <item>Drop</item>
        <item>Injectable</item>
        <item>Pomade</item>
        <item>Solution</item>
        <item>Suspension</item>
        <item>Syrup</item>
        <item>Others</item>
    </string-array>
    <string name="nome_do_campo">Field Name:</string>
    <string name="campo_nome_hint">Type the field name</string>
    <string name="tipo_do_campo">Field Type:</string>
    <string-array name="array_tipos_campo">
        <item>Integer Number</item>
        <item>Decimal Number</item>
        <item>Text</item>
        <item>Date</item>
    </string-array>
    <string-array name="nomes_campo">
        <item>Name</item>
        <item>Age</item>
        <item>Date of Birth</item>
        <item>Medications</item>
        <item>Description</item>
        <item>Observations</item>
        <item>Problem</item>
    </string-array>
    <string-array name="opcoes_consulta_array">
        <item>Send messages on cascade</item>
        <item>Trace rout</item>
        <item>Consultation Info</item>
        <item>Accomplish consultation</item>
    </string-array>
    <string name="tipo_campo_hint">Select the field type</string>
    <string name="botao_salvar_campo">Save Field</string>
    <string name="confirmar">Confirm</string>
    <string name="salvar">Saver</string>
    <string name="ok">OK</string>
    <string name="title_activity_lista_pacientes">ListaPacientes</string>
    <string-array name="Tipos_de_medico">
        <item>Acupuncturist</item>
        <item>Alergist</item>
        <item>Anesthetist</item>
        <item>Phlebologist</item>
        <item>Cardiologist</item>
        <item>Cardiovascular Surgeon</item>
        <item>Surgeon General</item>
        <item>Plastic Surgeon</item>
        <item>Coloproctologists</item>
        <item>Dermatologist</item>
        <item>Endocrinologist</item>
        <item>Gastroenterologist</item>
        <item>Genetics</item>
        <item>Geriatrician</item>
        <item>Gynecologist</item>
        <item>Hematologist</item>
        <item>Hemotherapist</item>
        <item>Homeopath</item>
        <item>Immunologist</item>
        <item>Infectologist</item>
        <item>Mastologist</item>
        <item>Metabologist</item>
        <item>Nephrologist</item>
        <item>Neonatologist</item>
        <item>Neurosurgeon</item>
        <item>Neurologist</item>
        <item>Nutrology</item>
        <item>Obstetrician</item>
        <item>Oncologist</item>
        <item>Ophthalmologist</item>
        <item>Orthopaedic</item>
        <item>Otorhinolaringologist</item>
        <item>Pathologist</item>
        <item>Pediatrician</item>
        <item>Pulmonologist</item>
        <item>Psychiatrist</item>
        <item>Radiologist</item>
        <item>Radio-oncology</item>
        <item>Traumatology</item>
        <item>Urologist</item>
    </string-array>
    <string-array name="tipos_consulta">
        <item>Routine</item>
        <item>Return</item>
        <item>Urgency</item>
    </string-array>
    <string name="SQL_CREATE_TABLES">        CREATE TABLE paciente (
        	id_paciente INTEGER PRIMARY KEY AUTOINCREMENT,
        	nome TEXT NOT NULL,
        	data_nascimento TEXT NOT NULL, 
        	sexo INTEGER NULL, 
        	escolaridade TEXT NULL, 
        	parente TEXT NULL, 
        	parente_tel TEXT NULL, 
        	parente_cel TEXT NULL, 
        	logradouro TEXT NOT NULL, 
        	bairro TEXT NULL,
        	numero INTEGER NOT NULL, 
        	tipo_end INTEGER NULL, 
        	cep TEXT NULL, 
        	cidade TEXT NOT NULL, 
        	complemento TEXT NULL);@
        
        CREATE TABLE telefone (
        	id_telefone INTEGER PRIMARY KEY AUTOINCREMENT,
        	fk_paciente INTEGER NOT NULL REFERENCES paciente(id_paciente) ON UPDATE CASCADE ON DELETE CASCADE,
        	telefone TEXT NOT NULL,
        	tipo_tel INTEGER NOT NULL);@
        
        CREATE TABLE consultas_marcadas (
        	id_consulta INTEGER PRIMARY KEY AUTOINCREMENT, 
        	fk_paciente INTEGER NOT NULL REFERENCES paciente(id_paciente) ON UPDATE CASCADE ON DELETE CASCADE,
        	data_hora TEXT NOT NULL, 
        	descricao TEXT NULL, 
        	tipo_con TEXT NULL);@
        
        CREATE TABLE medicamento (id_medicamento INTEGER PRIMARY KEY AUTOINCREMENT, nome TEXT NOT NULL, tipo TEXT NOT NULL, dosagem TEXT NULL, principioativo TEXT NULL, favorito INTEGER NULL);@

		CREATE TABLE medicamento_paciente (
			id_medicamento INTEGER REFERENCES medicamento(id_medicamento) ON UPDATE CASCADE ON DELETE CASCADE, 
			id_consulta INTEGER REFERENCES consultas(id_consulta) ON UPDATE CASCADE ON DELETE CASCADE, 
			fk_paciente REFERENCES paciente(id_paciente) ON UPDATE CASCADE ON DELETE CASCADE, 
			data_consulta TEXT NOT NULL,
			tread_many_time TEXT NULL,
			tread_many_time_type TEXT NULL,
			med_period TEXT NULL,
			med_period_time TEXT NULL,
			med_recommendation TEXT NULL,
			miss_dose_period TEXT NULL,
			miss_dose_type TEXT NULL,
			miss_dose_recomm TEXT NULL,
			PRIMARY KEY(id_medicamento,id_consulta));@
			
        CREATE TABLE internacoes_hospitalares (
        	id_internacao INTEGER PRIMARY KEY AUTOINCREMENT, 
        	fk_paciente REFERENCES paciente(id_paciente) ON UPDATE CASCADE ON DELETE CASCADE,
        	data TEXT NOT NULL,
        	hospital TEXT NOT NULL,
        	motivo_principal TEXT NOT NULL);@
        
        CREATE TABLE diagnostico (
        	id_diagnostico INTEGER PRIMARY KEY AUTOINCREMENT, 
        	nome TEXT NOT NULL, UNIQUE(nome));@
        	
        CREATE TABLE diagnostico_consulta (
        	id_diagnostico INTEGER REFERENCES diagnostico(id_diagnostico) ON UPDATE CASCADE ON DELETE CASCADE, 
			id_consulta INTEGER REFERENCES consultas(id_consulta) ON UPDATE CASCADE ON DELETE CASCADE,
			data_consulta TEXT NOT NULL, PRIMARY KEY(id_diagnostico, id_consulta));@
			
        CREATE TABLE exame ( id_exame INTEGER PRIMARY KEY AUTOINCREMENT,
        	nome TEXT NOL NULL,
        	tipocampovalor INTEGER NOT NULL);@
        	
		CREATE TABLE resultado_exame (
        	id_exame INTEGER REFERENCES exame(id_exame) ON UPDATE CASCADE ON DELETE CASCADE, 
			id_consulta INTEGER REFERENCES consultas(id_consulta) ON UPDATE CASCADE ON DELETE CASCADE,
			nome TEXT NOT NULL,
			valor TEXT NOT NULL,
			PRIMARY KEY(id_exame,id_consulta));@	
        
        CREATE TABLE foto (id INTEGER PRIMARY KEY AUTOINCREMENT,fk_paciente INTEGER REFERENCES paciente(id_paciente) NOT NULL , caminho TEXT NOT NULL, descricao TEXT NULL, data TEXT NULL);@
        
        CREATE TABLE video(id INTEGER PRIMARY KEY AUTOINCREMENT,fk_paciente INTEGER REFERENCES paciente(id_paciente), caminho TEXT NOT NULL, descricao TEXT NULL, data TEXT NULL);@
        
        CREATE TABLE audio (id INTEGER PRIMARY KEY AUTOINCREMENT,fk_paciente INTEGER REFERENCES paciente(id_paciente), caminho TEXT NOT NULL, descricao TEXT NULL, data TEXT NULL);@</string>
    <string name="DB_NAME">teste</string>
    <string-array name="opcoesTelefone">
        <item>Cell Phone</item>
        <item>Comercial</item>
        <item>Home</item>
        <item>Main</item>
        <item>Others</item>
    </string-array>
    <string-array name="tiposEndereco">
        <item>Road</item>
        <item>Avenue</item>
        <item>Square</item>
    </string-array>
    <string-array name="escolaridade">
        <item> DO NOT KNOW HOW TO READ/WRITE</item>
        <item>LITERATE</item>
        <item>BASIC EDUCATION INCOMPLETE</item>
        <item>BASIC EDUCATION COMPLETE</item>
        <item>HIGH SCHOOL INCOMPLETE</item>
        <item>HIGH SCHOOL COMPLETE</item>
        <item>UNDERGRADUATE/GRADUATE INCOMPLETE</item>
        <item>UNDERGRADUATE/GRADUATE COMPLETE</item>
        <item>SPECIALIZATION</item>
        <item>TECHNICAL COURSE</item>
        <item>POSTGRADUATE</item>
        <item>PhD</item>
    </string-array>
    <string-array name="tiposTel">
        <item>Cell Phone</item>
        <item>Home</item>
        <item>Comercial</item>
        <item>Others</item>
    </string-array>
    <string-array name="many_days">
        <item>How Many</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="many_weeks">
        <item>Weeks</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="time_type">
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
    </string-array>
    <string-array name="time_period">
        <item>Period</item>
        <item>Each 4 Hours</item>
        <item>Each 6 Hours</item>
        <item>Each 8 Hours</item>
        <item>Each 12 Hours</item>
        <item>Each 24 Hours</item>
    </string-array>
    <string-array name="missing_period">
        <item>delayed</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="missing_period_type">
        <item>Hours</item>
        <item>Days</item>
    </string-array>
    <string-array name="many_months">
        <item>Months</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="title_activity_efetua_ligacao">EfetuaLigacao</string>
    <string name="title_activity_menu_agenda">MenuAgenda</string>
    <string name="title_activity_cria_campo_view">CriaCampoView</string>
    <string name="title_activity_seleciona_campos_view">SelecionaCamposView</string>
    <string name="title_activity_agendar_consulta">AgendarConsulta</string>
    <string name="title_activity_agendar_consulta_2">AgendarConsulta_2</string>
    <string name="title_activity_consultas">Consultas</string>
    <string name="title_activity_visualiza_info_consulta_agendada">VisualizaInfoConsultaAgendada</string>
    <string name="title_activity_cadastrar_medicamento">Cadastrar_medicamento</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_lista_medicamentos">ListaMedicamentos</string>
    <string name="title_activity_editar_medicamento">Editar_medicamento</string>
    <string name="title_activity_visualizar_medicamento">VisualizarMedicamento</string>
    <string name="title_activity_realizar_consulta_main">RealizarConsultaMain</string>
    <string name="title_activity_consulta__fragment">Consulta_Fragment</string>
    <string name="title_activity_visualiza__consulta">Visualiza_Consulta</string>
</resources>