<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CriaCampoView" >

    <TextView
        android:id="@+id/textViewCampo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="@dimen/MargenPadrao"
        android:text="@string/nome_do_campo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <AutoCompleteTextView
        android:id="@+id/editTextCampoNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewCampo"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewCampo"
        android:ems="10"
        android:hint="@string/campo_nome_hint"
        android:inputType="text"
        android:padding="@dimen/MargenPadrao"
        android:textColor="@color/Black" />

        <requestFocus />

        <TextView
            android:id="@+id/textViewTipoCampo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextCampoNome"
            android:layout_below="@+id/editTextCampoNome"
            android:padding="@dimen/MargenPadrao"
            android:text="@string/tipo_do_campo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerTipoCampo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewTipoCampo"
            android:layout_below="@+id/textViewTipoCampo"
            android:hint="@string/tipo_campo_hint"
            android:padding="@dimen/MargenPadrao" />

        <Button
            android:id="@+id/buttonSalvaCampo"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerTipoCampo"
            android:layout_centerHorizontal="true"
            android:text="@string/botao_salvar_campo"
            android:onClick="salvaCampo" />

</RelativeLayout>